--- a/minecraft.service
+++ b/minecraft.service
@@ -7,8 +7,8 @@ After=network.target
 [Service]
 WorkingDirectory=/home/minecraft/server
 PrivateUsers=true # Users Database is not available for within the unit, only root and minecraft is available, eve$
-User=matthilt
-Group=matthilt
+User=minecraft
+Group=minecraft
 ProtectSystem=full # Read only mapping of /usr /boot and /etc
 ProtectHome=true # /home, /root and /run/user seam to be empty from within the unit. It is recommended to enable t$
 ProtectKernelTunables=true # /proc/sys, /sys, /proc/sysrq-trigger, /proc/latency_stats, /proc/acpi, /proc/timer_st$
